--- a/prime number.ipynb
+++ b/prime number.ipynb
@@ -25,10 +25,10 @@
     "        empty_list = list(range(2,num))\n",
     "        for i in empty_list:\n",
     "            if num % i == 0:\n",
-    "                print(\"değil\")\n",
+    "                print(\"This is not a prime number.\")\n",
     "                break\n",
     "            else:\n",
-    "                print(\"asal\")\n",
+    "                print(\"This is a prime number.\")\n",
     "                break\n",
     "        break"
    ]
