--- a/prime number.ipynb
+++ b/prime number.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9919e734",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter a number : 9\n",
-      "This is not a prime number.\n"
+      "Please enter a number : 1\n",
+      "This is a prime number.\n"
      ]
     }
    ],
@@ -39,7 +39,20 @@
    "id": "18fdcf63",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = int(input(\"Enter a positive number to check if it is a Prime Number\"))\n",
+    "counter = 0\n",
+    "\n",
+    "for i in range(1, n+1) :\n",
+    "    if n % i == 0 :\n",
+    "        counter += 1\n",
+    "        \n",
+    "if (n == 0) or (n == 1) or (counter >= 3) :\n",
+    "    print(n, \" is not a Prime Number\")\n",
+    "    \n",
+    "else :\n",
+    "    print(n, \" is a Prime Number\")"
+   ]
   }
  ],
  "metadata": {
